# Hackathon-Todo-Evolution

./: .claude.rar  .gitignore  AUTHENTICATION-REQUIRED.md  COMPLETE-STATUS.md  CURRENT-STATUS.md  DATABASE-SETUP.md  DEPLOY-INSTRUCTIONS-URDU.md  DEPLOY-INSTRUCTIONS.md  DEPLOY-NOW.md  DEPLOYMENT-STATUS.md  DOCKER-README.md  EVENT-ARCHITECTURE.md  FINAL-COMPLETE-STATUS.md  FINAL-HACKATHON-STATUS.md  FINAL-STATUS.md  GITHUB-DEPLOY-GUIDE.md  GITHUB-SUCCESS.md  HACKATHON-PROGRESS.md  KAFKA-DAPR-README.md  KUBERNETES-README.md  PHASE-2-FINAL-STATUS.md  PHASE-2-STATUS.md  PHASE-2-SUMMARY.md  PHASE-3-COMPLETE.md  PHASE-3-PLAN.md  PHASE-4-PLAN.md  PHASE-5-PLAN.md  PROJECT-SUMMARY.md  QUICK-START.md  README.md  TESTING-CHECKLIST.md  VERCEL-CLI-COMMANDS.md  VERCEL-DEPLOY-LOG.md  VERCEL-DEPLOYMENT-URDU.md  VIDEO-SCRIPTS.sh  YOUR-ACTION-ITEMS.md  deploy-vercel.bat  details.md  setup-env.py
.claude/: settings.local.json
dapr/: config.yaml
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  database-service.yaml  database-statefulset.yaml  frontend-deployment.yaml  frontend-service.yaml  secrets.yaml
project/backend/: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
project/backend/app/: config.py  database.py  main.py
project/backend/app/middleware/: __init__.py  auth.py
project/backend/app/models/: __init__.py  task.py  user.py
project/backend/app/routes/: __init__.py  auth.py  tasks.py
project/backend/app/schemas/: __init__.py  auth.py  task.py
project/backend/tests/: conftest.py  test_auth.py  test_tasks.py
(+57 files in other folders)
